force-app/main/default/objects/sugati__Supplier_Payment__c/sugati__Supplier_Payment__c.object-meta.xml
<CustomObject>
    <label>Supplier Payment</label>
    <nameField>
        <displayFormat>SP-{0000000000}</displayFormat>
        <label>Payment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supplier_Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>