force-app/main/default/objects/sugati__Supplier_Payment__c/fields/sugati__P_Amount__c.field-meta.xml
<CustomField>
    <fullName>sugati__P_Amount__c</fullName>
    <label>Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>