force-app/main/default/objects/sugati__Supplier_Payment__c/fields/sugati__S_SP_Contract__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SP_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>sugati__Supplier_Contract__c</referenceTo>
    <relationshipLabel>Supplier_Payments</relationshipLabel>
    <relationshipName>Supplier_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>