force-app/main/default/objects/sugati__Supplier_Payment__c/fields/sugati__S_SP_Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SP_Exchange_Rate__c</fullName>
    <label>Exchange Rate</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>