force-app/main/default/objects/sugati__Supplier_Payment__c/fields/sugati__S_SP_Transaction_Fee__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SP_Transaction_Fee__c</fullName>
    <label>Transaction Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>