force-app/main/default/objects/sugati__Supplier_Payment__c/fields/sugati__SBP_Supplier_Cost_Currency_Value__c.field-meta.xml
<CustomField>
    <fullName>sugati__SBP_Supplier_Cost_Currency_Value__c</fullName>
    <label>Supplier Cost Currency Value</label>
    <referenceTo>sugati__Supplier_Cost_Payment__c</referenceTo>
    <relationshipLabel>Supplier_Payments</relationshipLabel>
    <relationshipName>Supplier_Payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>