force-app/main/default/objects/sugati__Supplier_Payment__c/fields/sugati__SP_Amount_in_GBP__c.field-meta.xml
<CustomField>
    <fullName>sugati__SP_Amount_in_GBP__c</fullName>
    <formula>IF (ISNULL(sugati__SP_Payment_RoE__c), sugati__P_Amount__c / sugati__SP_Costing_ROE__c, sugati__P_Amount__c / sugati__SP_Payment_RoE__c)</formula>
    <label>Amount in Booking Currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>