force-app/main/default/objects/sugati__Supplier_Payment__c/fields/sugati__SP_Authorised_by__c.field-meta.xml
<CustomField>
    <fullName>sugati__SP_Authorised_by__c</fullName>
    <label>Authorised by</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ysobel Greenlees</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>