force-app/main/default/objects/sugati__Supplier_Payment__c/fields/sugati__SP_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>sugati__SP_Bank_Account__c</fullName>
    <label>Bank Account</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Handels Current AC- OTUK</fullName>
            </value>
            <value>
                <fullName>Handles Bank Account EUR - 71697839</fullName>
            </value>
            <value>
                <fullName>Handles Bank Account USD-58408652</fullName>
            </value>
            <value>
                <fullName>Handles Current Account GBP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>