force-app/main/default/objects/sugati__Supplier_Payment__c/fields/sugati__SP_Bank_Accounts__c.field-meta.xml
<CustomField>
    <fullName>sugati__SP_Bank_Accounts__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank Account</label>
    <referenceTo>sugati__Bank_Account__c</referenceTo>
    <relationshipLabel>Supplier_Payments (Bank Account)</relationshipLabel>
    <relationshipName>Supplier_Payments1</relationshipName>
    <type>Lookup</type>
</CustomField>