force-app/main/default/objects/sugati__Supplier_Payment__c/fields/sugati__SP_Booking__c.field-meta.xml
<CustomField>
    <fullName>sugati__SP_Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Supplier_Payments</relationshipLabel>
    <relationshipName>Supplier_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>