force-app/main/default/objects/sugati__Supplier_Payment__c/fields/sugati__SP_Comment__c.field-meta.xml
<CustomField>
    <fullName>sugati__SP_Comment__c</fullName>
    <description>Comment put in for Steve</description>
    <inlineHelpText>Supplier Comment</inlineHelpText>
    <label>Comment</label>
    <type>TextArea</type>
</CustomField>