force-app/main/default/objects/sugati__Supplier_Payment__c/fields/sugati__SP_Costing_ROE__c.field-meta.xml
<CustomField>
    <fullName>sugati__SP_Costing_ROE__c</fullName>
    <formula>sugati__SBP_Supplier_Cost_Currency_Value__r.sugati__SCP_Exchange_Rate__r.sugati__ER_Exchange_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Costing ROE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>