force-app/main/default/objects/sugati__Supplier_Payment__c/fields/sugati__SP_Due_Amount__c.field-meta.xml
<CustomField>
    <fullName>sugati__SP_Due_Amount__c</fullName>
    <formula>sugati__P_Amount__c -  sugati__SP_Total_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>