force-app/main/default/objects/sugati__Supplier_Payment__c/fields/sugati__SP_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__SP_Due_Date__c</fullName>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>