force-app/main/default/objects/sugati__Supplier_Payment__c/fields/sugati__SP_FX_Gain_Loss__c.field-meta.xml
<CustomField>
    <fullName>sugati__SP_FX_Gain_Loss__c</fullName>
    <formula>(sugati__P_Amount__c / sugati__SP_Costing_ROE__c) - (sugati__P_Amount__c / sugati__SP_Payment_RoE__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FX Gain/Loss</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>