force-app/main/default/objects/sugati__Supplier_Payment__c/fields/sugati__SP_Invoice__c.field-meta.xml
<CustomField>
    <fullName>sugati__SP_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Invoice</label>
    <referenceTo>sugati__Supplier_Invoice__c</referenceTo>
    <relationshipLabel>Supplier_Payments</relationshipLabel>
    <relationshipName>Supplier_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>