force-app/main/default/objects/sugati__Supplier_Payment__c/fields/sugati__SP_Note__c.field-meta.xml
<CustomField>
    <fullName>sugati__SP_Note__c</fullName>
    <label>Note</label>
    <type>TextArea</type>
</CustomField>