force-app/main/default/objects/sugati__Supplier_Payment__c/fields/sugati__SP_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>sugati__SP_Opportunity__c</fullName>
    <formula>sugati__SBP_Supplier_Cost_Currency_Value__r.sugati__SCP_Opportunity__r.sugati__O_Reference_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity</label>
    <type>Text</type>
</CustomField>