force-app/main/default/objects/sugati__Supplier_Payment__c/fields/sugati__SP_Order__c.field-meta.xml
<CustomField>
    <fullName>sugati__SP_Order__c</fullName>
    <formula>CASE(TEXT(sugati__SP_Type__c), 
&apos;Deposit&apos;, 1, 
&apos;Balance&apos;, 2, 
3 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>