force-app/main/default/objects/sugati__Supplier_Payment__c/fields/sugati__SP_Paid_By__c.field-meta.xml
<CustomField>
    <fullName>sugati__SP_Paid_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Paid By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Supplier_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>