force-app/main/default/objects/sugati__Supplier_Payment__c/fields/sugati__SP_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__SP_Payment_Date__c</fullName>
    <label>Paid On</label>
    <type>Date</type>
</CustomField>