force-app/main/default/objects/sugati__Supplier_Payment__c/fields/sugati__SP_Payment_From_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>sugati__SP_Payment_From_Bank_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment From Bank Account</label>
    <referenceTo>sugati__Bank_Account__c</referenceTo>
    <relationshipLabel>Supplier_Payments</relationshipLabel>
    <relationshipName>Supplier_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>