force-app/main/default/objects/sugati__Supplier_Payment__c/fields/sugati__SP_Payment_RoE__c.field-meta.xml
<CustomField>
    <fullName>sugati__SP_Payment_RoE__c</fullName>
    <label>Payment RoE</label>
    <precision>11</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>