force-app/main/default/objects/sugati__Supplier_Payment__c/fields/sugati__SP_Remittance_Comments_office_copy__c.field-meta.xml
<CustomField>
    <fullName>sugati__SP_Remittance_Comments_office_copy__c</fullName>
    <label>Remmitance Comment(Office)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>