force-app/main/default/objects/sugati__Supplier_Payment__c/fields/sugati__SP_Rev_Analysis_Code__c.field-meta.xml
<CustomField>
    <fullName>sugati__SP_Rev_Analysis_Code__c</fullName>
    <label>Rev Analysis Code</label>
    <type>TextArea</type>
</CustomField>