force-app/main/default/objects/sugati__Supplier_Payment__c/fields/sugati__SP_Supplier__c.field-meta.xml
<CustomField>
    <fullName>sugati__SP_Supplier__c</fullName>
    <formula>CASESAFEID(sugati__SBP_Supplier_Cost_Currency_Value__r.sugati__SCP_Supplier__c)</formula>
    <label>Supplier</label>
    <type>Text</type>
</CustomField>