force-app/main/default/objects/sugati__Supplier_Payment__c/fields/sugati__SP_Supplier_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__SP_Supplier_Name__c</fullName>
    <formula>sugati__SBP_Supplier_Cost_Currency_Value__r.sugati__SCP_Supplier__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Name</label>
    <type>Text</type>
</CustomField>