force-app/main/default/objects/sugati__Supplier_Payment__c/fields/sugati__SP_Supplier_Payment_Rule__c.field-meta.xml
<CustomField>
    <fullName>sugati__SP_Supplier_Payment_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Payment Rule</label>
    <referenceTo>sugati__Supplier_Payment_Rule__c</referenceTo>
    <relationshipLabel>Supplier_Payments</relationshipLabel>
    <relationshipName>Supplier_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>