force-app/main/default/objects/sugati__Supplier_Payment__c/fields/sugati__SP_Total_Paid__c.field-meta.xml
<CustomField>
    <fullName>sugati__SP_Total_Paid__c</fullName>
    <label>Total Paid</label>
    <summarizedField>sugati__Supplier_Payment_Transaction__c.sugati__SPT_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>sugati__Supplier_Payment_Transaction__c.sugati__SPT_Our_Ref__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>sugati__Supplier_Payment_Transaction__c.sugati__SPT_Supplier_Payment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>