force-app/main/default/objects/sugati__Supplier_Payment__c/fields/sugati__SP_Transferred_To_Accts__c.field-meta.xml
<CustomField>
    <fullName>sugati__SP_Transferred_To_Accts__c</fullName>
    <label>Transferred To Accts</label>
    <type>Date</type>
</CustomField>